--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
     name: contacthub
     runtime: python
     buildCommand: './build.sh'
-    startCommand: 'python -m gunicorn src/contacthub.asgi:application -k uvicorn.workers.UvicornWorker'
+    startCommand: 'python -m gunicorn contacthub.asgi:application -k uvicorn.workers.UvicornWorker'
     envVars:
       - key: DATABASE_URL
         fromDatabase:
